--- a/html/skins/liveWhite/skin.css
+++ b/html/skins/liveWhite/skin.css
@@ -202,12 +202,14 @@ div.sewise-player-ui div.controlbar ul.controlbar-btns li a.controlbar-btns-shar
 	position: relative;
 	float: right;
 	display: block;
-	width: 118px;
+	width: 120px;
 	height: 30px;
-	right: 6px;
+	right: 5px;
 	color: black;
 	line-height:30px;
 	text-align: right;
+	margin-left: 18px;
+	pointer-events: none;
 }
 
 
@@ -307,5 +309,5 @@ div.sewise-player-ui div.controlbar ul.controlbar-btns li a.controlbar-btns-shar
 	text-indent: -10000px;
 }
 .liveWhite div.sewise-player-ui div.big-play-btn:hover a.big-play-icon {
-	background: url("big_play_btn.png") -80px 0px no-repeat;
+	background: url("big_play_btn.png") 0px 0px no-repeat;
 }
